feat: 更新 pnpm-lock.yaml，添加新依赖并优化 tsup 配置
在 pnpm-lock.yaml 中添加了多个 @finda-co 相关的依赖项，并在 tsup.config.ts 中优化了配置，确保清理和目标版本设置。同时，更新了数据库和认证领域的代码，移除了不再使用的指纹相关功能，增强了用户认证和注册的命令处理逻辑。

--- a/domains/auth/infrastructure/package.json
+++ b/domains/auth/infrastructure/package.json
@@ -13,11 +13,13 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "import": "./dist/index.js"
     },
     "./schema": {
       "types": "./dist/schema.d.ts",
-      "require": "./dist/schema.js"
+      "require": "./dist/schema.js",
+      "import": "./dist/schema.js"
     }
   },
   "scripts": {
@@ -28,6 +30,7 @@
     "lint": "eslint \"src/**/*.ts\""
   },
   "dependencies": {
+    "@finda-co/core": "workspace:*",
     "@finda-co/domain-auth-core": "workspace:*",
     "@nestjs/common": "^11.0.7",
     "@nestjs/config": "^2.3.1",
