feat: 更新 TypeScript 配置和依赖项，优化构建脚本
将构建脚本从 tsup 更改为 tsc，并添加 tsconfig.build.json 文件以支持构建配置。同时，更新了 @nestjs 相关依赖项至最新版本，修复了代码中的类型声明，提升了代码的可维护性和一致性。

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,15 +24,18 @@
   "dependencies": {
     "@casl/ability": "^6.7.3",
     "@elastic/elasticsearch": "^8.16.2",
+    "@finda-co/core": "workspace:*",
+    "@finda-co/database": "workspace:*",
+    "@finda-co/domain-auth-core": "workspace:*",
+    "@finda-co/domain-auth-infra": "workspace:*",
     "@keyv/redis": "^4.2.0",
     "@knaadh/nestjs-drizzle-pg": "^1.2.0",
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/bullmq": "^11.0.2",
     "@nestjs/cache-manager": "3.0.0",
-    "@nestjs/common": "^11.0.7",
+    "@nestjs/common": "^11.0.12",
     "@nestjs/config": "^4.0.0",
-    "@nestjs/core": "^11.0.3",
-    "@nestjs/cqrs": "^11.0.1",
+    "@nestjs/core": "^11.0.12",
     "@nestjs/elasticsearch": "^11.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
@@ -73,6 +76,7 @@
     "@finda-co/jest-config": "workspace:*",
     "@finda-co/typescript-config": "workspace:*",
     "@nestjs/cli": "^10.4.9",
+    "@nestjs/devtools-integration": "^0.2.0",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^11.0.7",
     "@types/cookie-parser": "^1.4.7",
