--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,14 +17,13 @@
     }
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsc -p tsconfig.build.json",
     "dev": "tsup --watch",
     "test": "jest",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "dependencies": {
-    "@nestjs/core": "^11.0.3",
-    "@nestjs/cqrs": "^11.0.1",
+    "@nestjs/core": "^11.0.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.2",
     "uuid": "^11.0.2"
@@ -33,7 +32,7 @@
     "@finda-co/eslint-config": "workspace:*",
     "@finda-co/jest-config": "workspace:*",
     "@finda-co/typescript-config": "workspace:*",
-    "@nestjs/common": "^11.0.7",
+    "@nestjs/common": "^11.0.12",
     "@nestjs/testing": "^11.0.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
