--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_HTTP_PORT=3000
 SERVER_HTTP_PORT=8000
 QUEUE_HTTP_PORT=8001
 
-DATABASE_URL=postgresql://username:password@localhost:5432/finda-starter
+DATABASE_URL=postgresql://username:password@localhost:5432/finda_starter
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
