--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -36,6 +36,7 @@
     "@nestjs/common": "^11.0.12",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.12",
+    "@nestjs/cqrs": "^11.0.3",
     "@nestjs/elasticsearch": "^11.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
