feat: 集成 TypeORM，新增用户和身份实体及相关服务
在项目中集成了 TypeORM，新增了用户和身份实体，重构了用户注册和登录逻辑，确保用户信息的持久化。同时，更新了 app.module.ts 文件以配置数据库连接，新增 AuthService 和 UserService，提供用户注册和身份管理功能。此更新为后续的用户认证和授权功能奠定了基础。

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -43,6 +43,7 @@
     "@nestjs/platform-express": "^11.0.3",
     "@nestjs/swagger": "^11.0.2",
     "@nestjs/throttler": "^6.3.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@sentry/nestjs": "^8.50.0",
     "@sentry/profiling-node": "^8.50.0",
     "@types/slug": "^5.0.9",
@@ -68,6 +69,7 @@
     "rxjs": "^7.8.1",
     "set-cookie-parser": "^2.7.1",
     "slug": "^9.1.0",
+    "typeorm": "^0.3.21",
     "uuid": "^11.0.2",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1"
