fix: error when prod

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -13,10 +13,10 @@
     "@emotion/styled": "latest",
     "@finda-co/icons": "workspace:*",
     "@finda-co/ui-patterns": "workspace:*",
-    "@mui/icons-material": "latest",
-    "@mui/material": "latest",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "@mui/x-charts": "^7.27.1",
-    "@mui/x-data-grid": "^7.28.1",
+    "@mui/x-data-grid": "^7.28.3",
     "@mui/x-data-grid-pro": "^7.28.1",
     "@mui/x-date-pickers": "^7.27.1",
     "@mui/x-tree-view": "^7.28.1",
@@ -27,20 +27,20 @@
     "material-ui-popup-state": "^5.3.3",
     "mui-chips-input": "^4.0.1",
     "notistack": "^2.0.8",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-router": "^7.4.1"
   },
   "devDependencies": {
     "@finda-co/eslint-config": "workspace:*",
     "@finda-co/jest-config": "workspace:*",
     "@finda-co/typescript-config": "workspace:*",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@vitejs/plugin-react": "latest",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.8.1",
-    "typescript": "latest",
-    "vite": "latest",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.5",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
