--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "license": "MIT",
   "type": "module",
-  "main": "src/index.tsx",
-  "types": "src/index.tsx",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "generate": "node ./scripts/generate.js",
     "gen": "node ./scripts/generate.js",
@@ -15,7 +18,7 @@
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@finda-co/typescript-config": "workspace:*",
-    "@mui/material": "^6.4.5",
+    "@mui/material": "^7.0.1",
     "@svgr/babel-plugin-transform-svg-component": "^8.0.0",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
