--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "latest",
     "@finda-co/icons": "workspace:*",
     "@finda-co/ui-patterns": "workspace:*",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@mui/x-charts": "^7.27.1",
@@ -29,7 +30,9 @@
     "notistack": "^2.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.4.1"
+    "react-hook-form": "^7.55.0",
+    "react-router": "^7.4.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@finda-co/eslint-config": "workspace:*",
