feat: 新增引导页面和项目创建功能
在此次更新中，新增了引导页面，提供用户创建社区的步骤和指导。同时，新增了项目创建页面，允许用户选择项目类型、设置基本信息和上传资源。更新了路由配置，添加了引导和项目创建的入口。此外，优化了用户界面和交互体验，提升了整体可用性。这一变更为用户提供了更全面的项目管理和社区创建能力。

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.13",
     "material-ui-confirm": "^3.0.18",
     "material-ui-popup-state": "^5.3.3",
+    "motion": "^12.6.3",
     "mui-chips-input": "^4.0.1",
     "notistack": "^2.0.8",
     "react": "^19.1.0",
