fix: 更新依赖版本和优化拖拽组件
在此次更新中，将 @dnd-kit/react 的版本从 ^0.0.10 修改为 0.0.10，以确保依赖的准确性。同时，删除了 tsconfig.tsbuildinfo 文件，优化了 Column 和 Item 组件的样式和功能，提升了拖拽体验和界面一致性。这一变更增强了任务管理的可用性和用户体验。

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@dnd-kit/abstract": "^0.0.10",
     "@dnd-kit/helpers": "^0.0.10",
-    "@dnd-kit/react": "^0.0.10",
+    "@dnd-kit/react": "0.0.10",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@finda-co/icons": "workspace:*",
