feat: Add material-ui-toaster dependency and remove Toaster component files
This update introduces the `material-ui-toaster` package to the project, enhancing the notification system. Additionally, the existing Toaster component files have been removed to streamline the codebase, as the new package provides similar functionality. This change simplifies the implementation of toast notifications and improves maintainability.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dayjs": "^1.11.13",
     "material-ui-confirm": "^3.0.18",
     "material-ui-popup-state": "^5.3.3",
+    "material-ui-toaster": "^0.1.1",
     "mitt": "^3.0.1",
     "motion": "^12.6.3",
     "mui-chips-input": "^4.0.1",
