--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prepare": "husky",
+    "commitlint": "commitlint --config commitlint.config.cjs -e $GIT_PARAMS"
   },
   "dependencies": {
     "@dnd-kit/abstract": "^0.0.10",
@@ -41,6 +43,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
@@ -59,6 +63,7 @@
     "eslint-plugin-react-prefer-function-component": "3.3.0",
     "eslint-plugin-testing-library": "6.2.0",
     "eslint-plugin-unicorn": "52.0.0",
+    "husky": "^9.1.7",
     "typescript": "^5.8.2",
     "vite": "^6.2.5",
     "vite-plugin-pwa": "^1.0.0",
