feat: add ESLint CLI with pre-commit hook

--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
     "preview": "vite preview",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky",
-    "commitlint": "commitlint --config commitlint.config.cjs -e $GIT_PARAMS"
+    "commitlint": "commitlint --config commitlint.config.cjs -e $GIT_PARAMS",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@dnd-kit/abstract": "^0.0.10",
@@ -64,6 +75,7 @@
     "eslint-plugin-testing-library": "6.2.0",
     "eslint-plugin-unicorn": "52.0.0",
     "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
     "typescript": "^5.8.2",
     "vite": "^6.2.5",
     "vite-plugin-pwa": "^1.0.0",
