--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-react-prefer-function-component": "3.3.0",
     "eslint-plugin-testing-library": "6.2.0",
     "eslint-plugin-unicorn": "52.0.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "typescript": "^5.8.2",
