--- a/package.json
+++ b/package.json
@@ -29,6 +29,48 @@
     "@mui/x-date-pickers": "^7.27.1",
     "@mui/x-tree-view": "^7.28.1",
     "@react-spring/web": "^9.7.5",
+    "@tiptap/core": "^2.11.7",
+    "@tiptap/extension-blockquote": "2.0.4",
+    "@tiptap/extension-bold": "2.0.4",
+    "@tiptap/extension-bubble-menu": "2.0.4",
+    "@tiptap/extension-bullet-list": "2.0.4",
+    "@tiptap/extension-code": "2.0.4",
+    "@tiptap/extension-code-block": "2.0.4",
+    "@tiptap/extension-color": "2.0.4",
+    "@tiptap/extension-document": "2.0.4",
+    "@tiptap/extension-dropcursor": "2.0.4",
+    "@tiptap/extension-floating-menu": "2.0.4",
+    "@tiptap/extension-font-family": "2.0.4",
+    "@tiptap/extension-gapcursor": "2.0.4",
+    "@tiptap/extension-hard-break": "2.0.4",
+    "@tiptap/extension-heading": "2.0.4",
+    "@tiptap/extension-highlight": "2.0.4",
+    "@tiptap/extension-history": "2.0.4",
+    "@tiptap/extension-horizontal-rule": "2.0.4",
+    "@tiptap/extension-image": "2.0.4",
+    "@tiptap/extension-italic": "2.0.4",
+    "@tiptap/extension-link": "2.0.4",
+    "@tiptap/extension-list-item": "2.0.4",
+    "@tiptap/extension-mention": "2.0.4",
+    "@tiptap/extension-ordered-list": "2.0.4",
+    "@tiptap/extension-paragraph": "2.0.4",
+    "@tiptap/extension-placeholder": "2.0.4",
+    "@tiptap/extension-strike": "2.0.4",
+    "@tiptap/extension-subscript": "2.0.4",
+    "@tiptap/extension-superscript": "2.0.4",
+    "@tiptap/extension-table": "2.0.4",
+    "@tiptap/extension-table-cell": "2.0.4",
+    "@tiptap/extension-table-header": "2.0.4",
+    "@tiptap/extension-table-row": "2.0.4",
+    "@tiptap/extension-task-item": "2.0.4",
+    "@tiptap/extension-task-list": "2.0.4",
+    "@tiptap/extension-text": "2.0.4",
+    "@tiptap/extension-text-align": "2.0.4",
+    "@tiptap/extension-text-style": "2.0.4",
+    "@tiptap/extension-underline": "2.0.4",
+    "@tiptap/pm": "2.0.4",
+    "@tiptap/react": "2.0.4",
+    "@tiptap/suggestion": "2.0.4",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "material-ui-confirm": "^3.0.18",
@@ -37,10 +79,12 @@
     "mitt": "^3.0.1",
     "motion": "^12.6.3",
     "mui-chips-input": "^4.0.1",
+    "mui-tiptap": "^1.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-router": "^7.4.1",
+    "tippy.js": "^6.3.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
