--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "scripts": {
     "build": "tsc && vite build",
+    "build-storybook": "storybook build",
     "commitlint": "commitlint --config commitlint.config.cjs -e $GIT_PARAMS",
     "dev": "vite",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "eslint --fix",
     "prepare": "husky",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
     "@dnd-kit/abstract": "^0.0.10",
@@ -44,17 +46,30 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-onboarding": "^8.6.12",
+    "@storybook/blocks": "^8.6.12",
+    "@storybook/experimental-addon-test": "^8.6.12",
+    "@storybook/react": "^8.6.12",
+    "@storybook/react-vite": "^8.6.12",
+    "@storybook/test": "^8.6.12",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.8.1",
+    "@vitest/browser": "3.1.1",
+    "@vitest/coverage-v8": "3.1.1",
     "eslint": "9.24.0",
     "eslint-config-hyoban": "4.0.2",
+    "eslint-plugin-storybook": "^0.12.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
+    "playwright": "^1.51.1",
+    "storybook": "^8.6.12",
     "typescript": "^5.8.2",
     "vite": "^6.2.5",
     "vite-plugin-pwa": "^1.0.0",
@@ -68,6 +83,11 @@
     ],
     "*.{js,ts,cjs,mjs,jsx,tsx,json}": [
       "eslint --fix"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
     ]
   }
 }
