--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "@mui/x-date-pickers": "^7.27.1",
     "@mui/x-tree-view": "^7.28.1",
     "@react-spring/web": "^9.7.5",
+    "@rjsf/core": "^5.24.8",
+    "@rjsf/utils": "^5.24.8",
+    "@rjsf/validator-ajv8": "^5.24.8",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "material-ui-confirm": "^3.0.18",
     "material-ui-popup-state": "^5.3.3",
