--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/utils": "^7.0.2",
-    "@mui/x-charts": "^7.27.1",
-    "@mui/x-data-grid": "^7.28.3",
-    "@mui/x-data-grid-pro": "^7.28.1",
-    "@mui/x-date-pickers": "^7.27.1",
-    "@mui/x-tree-view": "^7.28.1",
+    "@mui/x-charts": "^8.0.0",
+    "@mui/x-data-grid": "^8.0.0",
+    "@mui/x-date-pickers": "^8.0.0",
+    "@mui/x-tree-view": "^8.0.0",
     "@react-spring/web": "^9.7.5",
     "@rjsf/core": "^5.24.8",
     "@rjsf/utils": "^5.24.8",
@@ -74,6 +73,7 @@
     "lint-staged": "^15.5.0",
     "playwright": "^1.51.1",
     "storybook": "^8.6.12",
+    "storybook-dark-mode": "^4.0.2",
     "typescript": "^5.8.2",
     "vite": "^6.2.5",
     "vite-plugin-pwa": "^1.0.0",
